// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AnswerBlock /> matches snapshot 1`] = `
<div
  className="answerBlock noMargin"
>
  <div
    className="content"
  >
    <div
      className="radioList"
    >
      <div
        className="radioButton"
      >
        <input
          checked={false}
          name="calculationType"
          onChange={[Function]}
          type="radio"
          value="SUM"
        />
        <div
          className="text"
        >
          Sum
        </div>
      </div>
      <div
        className="radioButton"
      >
        <input
          checked={false}
          name="calculationType"
          onChange={[Function]}
          type="radio"
          value="MULTIPLY"
        />
        <div
          className="text"
        >
          Multiply
        </div>
      </div>
    </div>
    <div
      className="answer"
    >
      Result: 
      0
    </div>
  </div>
</div>
`;

exports[`<AnswerBlock /> matches snapshot 2`] = `
<div
  className="answerBlock noMargin"
>
  <div
    className="content"
  >
    <div
      className="radioList"
    >
      <div
        className="radioButton"
      >
        <input
          checked={false}
          name="calculationType"
          onChange={[Function]}
          type="radio"
          value="SUM"
        />
        <div
          className="text"
        >
          Sum
        </div>
      </div>
      <div
        className="radioButton"
      >
        <input
          checked={true}
          name="calculationType"
          onChange={[Function]}
          type="radio"
          value="MULTIPLY"
        />
        <div
          className="text"
        >
          Multiply
        </div>
      </div>
    </div>
    <div
      className="answer"
    >
      Result: 
      240
    </div>
  </div>
</div>
`;

exports[`<AnswerBlock /> matches snapshot 3`] = `
<div
  className="answerBlock noMargin"
>
  <div
    className="content"
  >
    <div
      className="radioList"
    >
      <div
        className="radioButton"
      >
        <input
          checked={true}
          name="calculationType"
          onChange={[Function]}
          type="radio"
          value="SUM"
        />
        <div
          className="text"
        >
          Sum
        </div>
      </div>
      <div
        className="radioButton"
      >
        <input
          checked={false}
          name="calculationType"
          onChange={[Function]}
          type="radio"
          value="MULTIPLY"
        />
        <div
          className="text"
        >
          Multiply
        </div>
      </div>
    </div>
    <div
      className="answer"
    >
      Result: 
      28
    </div>
  </div>
</div>
`;
